chore: Fix overflow scroll.

--- a/packages/map-template/src/components/LegendDialog/LegendDialog.scss
+++ b/packages/map-template/src/components/LegendDialog/LegendDialog.scss
@@ -52,8 +52,6 @@
     }
 
     &__sections {
-        overflow: scroll;
-
         &--scrollable {
             &::before {
                 content: '';
